--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -6,16 +6,21 @@ on:
     # - cron: '20 0 * * *' # runs at every 4AM UTC+8
     - cron: '0,30 * * * *' # runs every 30 mins
 
+
 jobs:
   update-readme:
-    name: WakaReadme DevMetrics
+    name: Update Readme with Metrics
     runs-on: ubuntu-latest
     steps:
-      - uses: athul/waka-readme@master
+      - uses: anmol098/waka-readme-stats@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          SHOW_TITLE: true
-          TIME_RANGE: last_30_days
-          SHOW_TOTAL: true
-          SHOW_TIME: true
-          SHOW_MASKED_TIME: true
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          COMMIT_BY_ME: "True"
+          SHOW_UPDATED_DATE: "True"
+          SHOW_PROFILE_VIEWS: "False"
+          SHOW_LINES_OF_CODE: "True"
+          SHOW_LANGUAGE: "True"
+          SHOW_DAYS_OF_WEEK: "True"
+          SHOW_SHORT_INFO: "True"
+          SHOW_LOC_CHART: "False"
