--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch: # for manual workflow trigger
   schedule:
     # - cron: '20 0 * * *' # runs at every 4AM UTC+8
-    - cron: '* */2 * * *' # runs every 2hrs
+    - cron: '0 */2 * * *' # runs every 2hrs
 
 
 jobs:
