--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -4,8 +4,7 @@ on:
   workflow_dispatch: # for manual workflow trigger
   schedule:
     # - cron: '20 0 * * *' # runs at every 4AM UTC+8
-    - cron: '0 0,2,4,6,8,10,12,14 * * *' # runs every 2hrs during daytime UTC+8
-
+    - cron: '0 8,20 * * *' # runs every 12hr
 
 jobs:
   update-readme:
